--- a/css/home/home.css
+++ b/css/home/home.css
@@ -1,4 +1,7 @@
 body{
-    background-color: #696969;
-    color: #f5f5f5;
+    body {
+    background: linear-gradient(135deg, #0f0f0f, #1a1a1a, #222222);
+    color: #e5e5e5;
+}
+
 }
