--- a/css/home/home.css
+++ b/css/home/home.css
@@ -28,8 +28,15 @@ body::before {
 .hero {
     padding: 80px 10%;
     height: 77vh;
-    background: url('/grenadine/contents/img/name_logo.png') center/cover no-repeat;
+    background: url('/grenadine/img/name_logo.png') center/cover no-repeat;
     position: relative;
+}
+.hero::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: #0b0b0b; /* ← この色で body 背景を隠す */
+    z-index: -1;
 }
 .hero .overlay {
     background: rgba(173, 173, 173, 0.174);
